# novaconsole

./: .gitignore  README.md  constraits.txt  devel-pip-freeze-requirements.txt  my-pip-freeze.txt  setup.cfg  setup.py
novaconsole/: __init__.py
