# metadata section : package metadata
# これらの値はpypiで公開時に公開される
#
[metadata]
name = novaconsole
version = attr: src.VERSION
license = file: LICENSE.txt

# options section
# 
[options]
install_requires = 
    websocket-client>=0.23
    python-keystoneclient
    python-novaclient

# options.extras_require
# [options.extras_require]
# develop =
#     dev_packageA
#     dev_packageB
#
#

[options.entry_points]
console_scripts =
    novaconsole = novaconsole.main:main

